<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_as"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/adminButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/green"
        android:padding="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/userButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/green"
        android:padding="12dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>